bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `NumOfBitsMod8Is<7>: NumOfBitsDivisibleBy8` is not satisfied
  --> tests/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `NumOfBitsDivisibleBy8` is not implemented for `NumOfBitsMod8Is<7>`
   |
   = help: the trait `NumOfBitsDivisibleBy8` is implemented for `NumOfBitsMod8Is<0>`
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
